--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: "Titan Scheduler"
-theme: beautiful-jekyll-theme
 description: "Welcome to the Titan Scheduler! Here, you can place the file from your Titan Degree Audit. We will tell you what classes you are required to take for next semester along with their availability. If you want us to create a schedule for you, we can do that as well!"
-resources:
-  - Beautiful Jekyll: "https://beautifuljekyll.com"
+
+remote_theme: mmistakes/beautiful-jekyll  # GitHub repo for the theme
+plugins:
+  - jekyll-remote-theme
