--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,13 @@
 title: "Titan Scheduler"
 description: "Welcome to the Titan Scheduler! Here, you can place the file from your Titan Degree Audit. We will tell you what classes you are required to take for next semester along with their availability. If you want us to create a schedule for you, we can do that as well!"
 
-remote_theme: mmistakes/beautiful-jekyll  # GitHub repo for the theme
+remote_theme: daattali/beautiful-jekyll
 plugins:
-  - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
+
+header_pages:
+  - index.md
+
+resources:
+  - Beautiful Jekyll: "https://beautifuljekyll.com"
